--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "whiskytinder-",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "private": "true",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "dev:build": "webpack --watch",
+    "dev:server": "live-server dist"
   },
   "repository": {
     "type": "git",
