--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "file-loader": "^6.0.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "live-server": "^1.2.1"
   }
 }
