--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "dev:build": "webpack --watch",
-    "dev:server": "live-server dist"
+    "dev:server": "live-server --port=9999 dist"
   },
   "repository": {
     "type": "git",
